logs/ordf.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Pairtree-0.8.1.egg-info'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/isodate'...
Listing './lib/python3.5/site-packages/isodate/tests'...
Listing './lib/python3.5/site-packages/isodate-0.6.0.dist-info'...
Listing './lib/python3.5/site-packages/ordf'...
Compiling './lib/python3.5/site-packages/ordf/command.py'...
***   File "./lib/python3.5/site-packages/ordf/command.py", line 317
    print "ERROR: missing log message"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ordf/handler'...
Compiling './lib/python3.5/site-packages/ordf/handler/__init__.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (__init__.py, line 98)
Compiling './lib/python3.5/site-packages/ordf/handler/fuxi.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (fuxi.py, line 119)
Compiling './lib/python3.5/site-packages/ordf/handler/queue.py'...
***   File "./lib/python3.5/site-packages/ordf/handler/queue.py", line 136
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ordf/pylons'...
Listing './lib/python3.5/site-packages/ordf/rules'...
Listing './lib/python3.5/site-packages/ordf/tests'...
Listing './lib/python3.5/site-packages/ordf/tests/data'...
Compiling './lib/python3.5/site-packages/ordf/tests/test_fresnel.py'...
***   File "./lib/python3.5/site-packages/ordf/tests/test_fresnel.py", line 14
    print minidom.parseString(doc).toprettyxml()
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ordf/tests/test_queue.py'...
***   File "./lib/python3.5/site-packages/ordf/tests/test_queue.py", line 9
    print "recv graph", ctx.identifier
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ordf/vocab'...
Compiling './lib/python3.5/site-packages/ordf/vocab/changeset.py'...
***   File "./lib/python3.5/site-packages/ordf/vocab/changeset.py", line 194
    def reify(self, op, (s,p,o,c)):
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ordf/vocab/fresnel.py'...
***   File "./lib/python3.5/site-packages/ordf/vocab/fresnel.py", line 446
    print doc
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ordf/vocab/n3'...
Compiling './lib/python3.5/site-packages/ordf/vocab/opencyc.py'...
***   File "./lib/python3.5/site-packages/ordf/vocab/opencyc.py", line 47
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ordf/vocab/owl.py'...
***   File "./lib/python3.5/site-packages/ordf/vocab/owl.py", line 497
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ordf/vocab/sdmx.py'...
***   File "./lib/python3.5/site-packages/ordf/vocab/sdmx.py", line 106
    print g.serialize(format="n3")
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ordf-0.36.egg-info'...
Listing './lib/python3.5/site-packages/pairtree'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/rdflib'...
Listing './lib/python3.5/site-packages/rdflib/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyMicrodata'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/extras'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/host'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/rdfs'...
Listing './lib/python3.5/site-packages/rdflib/plugins/parsers/pyRdfa/transform'...
Listing './lib/python3.5/site-packages/rdflib/plugins/serializers'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql'...
Listing './lib/python3.5/site-packages/rdflib/plugins/sparql/results'...
Listing './lib/python3.5/site-packages/rdflib/plugins/stores'...
Listing './lib/python3.5/site-packages/rdflib/tools'...
Listing './lib/python3.5/site-packages/rdflib-4.2.2.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './share'...
Listing './share/python-wheels'...
